created proper branch

--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Wed Jan 26 09:10:06 EST 2022
-sdk.dir=C\:\\Users\\coryg\\AppData\\Local\\Android\\Sdk
+#Thu Jan 27 12:07:17 EST 2022
+sdk.dir=C\:\\Users\\robin\\AppData\\Local\\Android\\Sdk
