--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,6 +56,7 @@ dependencies {
 
     //Material Design Components
     implementation 'com.google.android.material:material:<version>'
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
 
     //Navigation Controller
     def nav_version = "2.3.5"
