--- a/app/build.gradle
+++ b/app/build.gradle
@@ -119,4 +119,17 @@ dependencies {
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+
+    //Firebase BoM
+    implementation platform('com.google.firebase:firebase-bom:29.0.4')
+
+    // Add the dependency for the Firebase SDK for Google Analytics
+    // When using the BoM, don't specify versions in Firebase dependencies
+    implementation 'com.google.firebase:firebase-analytics'
+
+    //Authentication
+    implementation 'com.google.firebase:firebase-auth-ktx'
+
+    //Firestore
+    implementation 'com.google.firebase:firebase-firestore-ktx'
 }
