--- a/local.properties
+++ b/local.properties
@@ -5,4 +5,4 @@
 # For customization when using a Version Control System, please read the
 # header note.
 #Thu Jan 27 12:07:17 EST 2022
-sdk.dir=C\:\\Users\\robin\\AppData\\Local\\Android\\Sdk
+sdk.dir=/Users/latifahpresident/Library/Android/sdk
