--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Thu Jan 27 12:07:17 EST 2022
-sdk.dir=/Users/latifahpresident/Library/Android/sdk
+#Sun Feb 13 13:29:45 EST 2022
+sdk.dir=C\:\\Users\\KaYaI\\AppData\\Local\\Android\\Sdk
