moved Firebase functions to mainRepository; set up TechbookViewModel and calls in fragments; added firebase dependency injection to AppModule; slightly altered navigation arguments in fragments to prevent crashes

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,7 +9,7 @@ plugins {
     id "kotlin-parcelize"
 
     //SafeArgs for Navigation
-    id 'androidx.navigation.safeargs.kotlin'
+    id 'androidx.navigation.safeargs'
 
     //Dagger Hilt Plugin
     id 'dagger.hilt.android.plugin'
