fixed gradle issues

--- a/local.properties
+++ b/local.properties
@@ -5,4 +5,4 @@
 # For customization when using a Version Control System, please read the
 # header note.
 #Sun Mar 20 21:16:41 EDT 2022
-sdk.dir=C\:\\Users\\coryg\\AppData\\Local\\Android\\Sdk
+sdk.dir=/Users/latifahpresident/Library/Android/sdk
